--- a/index.html
+++ b/index.html
@@ -3926,7 +3926,7 @@ display: none;
 <a href="tba.html">Trajectories</a>
 <a href="tba.html">Alignment</a>
 <a href="7_multimodal.html">Multi-modal</a>
-<a href="tba.html">VDJ</a>
+<a href="8_vdj.html">VDJ</a>
 <a href="previous.html">Previous-workshops</a>
 <a href="r_install.html">Installing R</a>
 </div>
