--- a/index.html
+++ b/index.html
@@ -3923,8 +3923,8 @@ display: none;
 <a href="2_filtering_QC.html">Data Filtering and Quality Control</a>
 <a href="tba.html">Clustering and Visualization</a>
 <a href="4_markers.html">Cluster Markers and Cell Type Assignment</a>
-<a href="tba.html">Trajectories</a>
-<a href="tba.html">Alignment</a>
+<a href="5_trajectories.html">Trajectories</a>
+<a href="6_alignment.html">Alignment</a>
 <a href="7_multimodal.html">Multi-modal</a>
 <a href="8_vdj.html">VDJ</a>
 <a href="previous.html">Previous-workshops</a>
